# vulkan-voxel-restir-gi

./: Cargo.toml
src/: camera.rs  main.rs  utils.rs
src/game_system/: chunk.rs  chunk_manager.rs  ego_controls_manager.rs  game_world.rs  manager.rs  mod.rs  physics_manager.rs  scene_manager.rs
src/render_system/: interactive_rendering.rs  mod.rs  scene.rs  vertex.rs
src/render_system/bvh/: aabb.rs  build.rs
src/render_system/shader/: accumulate_shader.rs  compute_outgoing_radiance_shader.rs  mod.rs  nee_pdf.rs  outgoing_radiance.rs  outgoing_radiance_shader.rs  postprocess.rs  postprocess_shader.rs  raygen.rs  raygen_shader.rs  raytrace.rs  raytrace_shader.rs  restir_finalize.rs  restir_spatial_resampling.rs  restir_temporal_resampling.rs
