[package]
name = "vulkan-voxel-restir-gi"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.5"
nalgebra = { version="0.33", features=["convert-bytemuck"] }
noise = "0.9.0"
partition = "0.1.2"
rand = "0.9.0"
rapier3d = "0.23.0"
serde = { version="1.0.217", features=["derive"] }
serde_json = "1.0.138"
threadpool = "1.8.1"
vulkano = "0.35"
vulkano-shaders = { version="0.35.0", features=["shaderc-debug"]}
vulkano-win = "0.34.0"
winit = "0.29"


# Add this to your Cargo.toml
[profile.dev.package.rapier3d]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.noise]
opt-level = 3
